--- a/scorecard.css
+++ b/scorecard.css
@@ -90,11 +90,35 @@ main {
 .players-list {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 10px;
-    width: 100%;
+    gap: 0px;
+    width: 100vw;
     align-self: flex-start; /* Align to the top-left */
 }
 
+.scrollable {
+    max-height: 200px; /* Default: display around 3 players */
+    overflow-y: scroll;
+}
+
+.player {
+    margin: 10px 0;
+}
+
+.player-name, .player-holes, .player-score {
+    display: block;
+}
+
+.horizontal-bar {
+    position: relative;      /* Use relative positioning */
+    left: 0;                 /* Align to the left */
+    right: 0;                /* Align to the right */
+    width: 100%;             /* Full width */
+    height: 5px;             /* Bar thickness */
+    background-color: black; /* Black color */
+    margin: 20px 0;          /* Spacing above and below the bar */
+    border: none;            /* No border */
+    z-index: 1;              /* Ensure it appears above other elements */
+}
 
 /* Footer */
 footer {
@@ -157,5 +181,12 @@ footer {
     main {
         margin-top: 38px; /* Adjust this value to match the smaller header height */
         min-height: calc(100vh - 38px - 30px); /* Adjust height based on smaller header */
+    }
+}
+
+@media (max-width: 600px) {
+    .scrollable {
+        max-height: 70px;
+        max-width: 100vw; /* Adjust to show only 1 player at a time */
     }
 }
