--- a/scorecard.css
+++ b/scorecard.css
@@ -199,7 +199,7 @@ main {
 
 
 .questions-container {
-    calc: (100vh - 335px); /* Adjust this value based on your needs */
+    max-height: calc(100vh - 335px); /* Adjust this value based on your needs */
     overflow-y: auto;
     padding: 10px;
 }
